--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 				</div>
 				<div class="card information margin-top">
 					<div class="card-block">
-						<h3 class="card-title" style="color:rgb(255,0,0)"> Information</h3> 
+						<h3 class="card-title" > Information</h3> 
 						<!--<h3 class="card-title my-font" style="color:rgb(255,0,0)"> Information</h3>-->
 						<p>
 							<i class="fa fa-graduation-cap"></i>
@@ -105,7 +105,7 @@
 				</div>
 				<div class="card skills margin-top">
 					<div class="card-block">
-						<h3 class="card-title" style="color: rgb(255,0,0);"> My Skills</h2>
+						<h3 class="card-title" > My Skills</h2>
 						<span>Python, Tensorflow, LaTex</span>
 						<div class="progress">
 							<div class="progress-bar green-html">
