--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 						<a href="https://scholar.google.com/citations?user=ZKuRZaEAAAAJ&hl=zh-CN">
 							<i class="fa fa-google fa-2x"> </i>
 						</a>
-						<a href="https://github.com/Qiang1991">
+						<a href="https://github.com/QiangAIResearcher">
 							<i class="fa fa-github fa-2x" aria-hidden="true"> </i>
 						</a>
 					</div>
