--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
 		          		<a class="dropdown-item" href="#WearableComputingPosition">Wearable Computing</a>
 		        	</div>
 		      	</li>
+		      	<li class="nav-item">
+	        		<a class="nav-link" href="blog.html" style="color:rgb(0,0,0)">Blogs</a>
+	      		</li>
 	    	</ul>
 	  	</div>
 	</nav>
@@ -105,7 +108,7 @@
 				</div>
 				<div class="card skills margin-top">
 					<div class="card-block">
-						<h3 class="card-title" > My Skills</h2>
+						<h3 class="card-title" > Skills</h2>
 						<span>Python, Tensorflow, LaTex</span>
 						<div class="progress">
 							<div class="progress-bar green-html">
