--- a/blog.html
+++ b/blog.html
@@ -124,7 +124,16 @@
 				<p>
 					By alternating the input of question generation and answer generation, this paper inspires us to sovle problems by joint training. The beneficial intreaction between two tasks through parameter sharing could help imrpove each task under a multitask setting. 4/12/2017
 				</p>
+				</div>
 
+				<div class="card-block Information">
+					<h4 style="color: rgb(255,0,0);"> <a id="HomePosition"></a> Direct Feedback Alignment Provides Learning in Deep Neural Networks</h4>
+				<p>
+					Artificial neural networks use back-propagation to update weights along the same way with the forward direction, which seems not biologically plausible. This paper examined a differrent approach, feedback alignment, to do the gradient descent and weight updating. As shown in figure 1, the output error is connected to the hidden layers in direct and indirect ways. Essentially, the neuiral networks take the error as the input, and treat the backward process as the forward process. No weight initialization is required.
+				</p>
+				<p>
+					Experiments were conducted on the MNIST and CIFAR. Comaprable performance was achieved. 18/12/2017
+				</p>
 				</div>
 
 			</div>
