--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
 		      	<li class="nav-item">
 	        		<a class="nav-link" href="blog.html" style="color:rgb(0,0,0)">Blogs</a>
 	      		</li>
+	      		<li class="nav-item">
+	        		<a class="nav-link" href="#AwardsPosition" style="color:rgb(0,0,0)">Awards</a>
+	      		</li>
 	    	</ul>
 	  	</div>
 	</nav>
@@ -171,6 +174,16 @@
 						<li><a id="OptimizationofNeuralModelTrainingPosition">Optimization of Neural Model Training</a> </li>
 						<li><a id="FakeNewsDetectionPosition">Fake News Detection</a></li>
 						<li><a id="WearableComputingPosition">Wearable Computing</a></li>
+					</ul>
+				</div>
+
+				<div class="card-block">
+					<h2 style="color: rgb(255,0,0);">Awards</h2>
+					<ul>
+						<li><a id="AwardsPosition"> 2017 Highlight Paper: <I>Cuff-less blood pressure measurement using pulse arrival time and a Kalman filter</I> is selected as the 
+							<a href="http://iopscience.iop.org/journal/0960-1317/page/Highlights-of-2017"> JMM Highlights of 2017</a>. 
+						</a> </li>
+						
 					</ul>
 				</div>
 
