--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 					<h2 style="color: rgb(255,0,0);"> <a id="HomePosition"></a> Short Bio</h2>
 				<p>
 					Mr. Qiang Zhang started his PhD research under supervision of 
-					<a href="https://sites.google.com/site/researchyilmaz/"> Dr. Emine Yilmaz</a> from September 2017. Before that, he obtained his bachelor and master degree from Shandong Univeristy in 2014 and Chinese Academy of Sciences in 2017, respectively. Qiang is now attached to the 
+					<a href="https://sites.google.com/site/researchyilmaz/"> Dr. Emine Yilmaz</a> from September 2017. Before that, he obtained his bachelor and master degree from Shandong Univeristy in 2014 and Chinese Academy of Sciences in 2017, respectively. Qiang is now affiliated to the 
 					<a href="http://www.csml.ucl.ac.uk/"> Centre for Computational Statistics and Machine Learning </a> 
 					of  
 					<a href="http://www.cs.ucl.ac.uk/home/"> Department of Computer Science</a>,
