--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
 			<div class="col-md-12">
 				<div class="jumbotron">
 				  <h1 class="display-5">Welcome to Qiang's Homepage</h1>
-				  <p class="lead">This is a primary version of my homepage after one weekend's efforts.</p>
 				  <!--
+				  <p class="lead">This is a primary version of my homepage after one weekend's efforts.</p>
+				  
 				  <hr class="my-4"><p>The website is still under constructions.</p>
 				-->
 				  <p class="lead">
@@ -70,7 +71,7 @@
 				<div class="card text-center description">
 					<div class="card-block">
 						<img class="rounded-circle animated infinite" src="img/Qiang.jpg" width="150" height="150">
-						<h4 class="card-title margin-top"> Qiang (John) Zhang </h4>
+						<h4 class="card-title margin-top"> Qiang ZHANG </h4>
 						<p class="card-text">
 							Artificial Intelligence Researcher!
 						</p>
@@ -112,7 +113,7 @@
 				<div class="card skills margin-top">
 					<div class="card-block">
 						<h3 class="card-title" > Skills</h2>
-						<span>Python, Tensorflow, LaTex</span>
+						<span>Python, Tensorflow, PyTorch, MXNet</span>
 						<div class="progress">
 							<div class="progress-bar green-html">
 								100%
@@ -124,7 +125,7 @@
 								75%
 							</div>
 						</div>
-						<span>Java, R, Go</span>
+						<span>Java, R, Scala, Go</span>
 						<div class="progress">
 							<div class="progress-bar blue-html">
 								50%
@@ -140,14 +141,14 @@
 					<h2 style="color: rgb(255,0,0);"> <a id="HomePosition"></a> Short Bio</h2>
 				<p>
 					Mr. Qiang Zhang started his PhD research under supervision of 
-					<a href="https://sites.google.com/site/researchyilmaz/"> Dr. Emine Yilmaz</a> from September 2017. Before that, he obtained his bachelor and master degree from Shandong Univeristy in 2014 and Chinese Academy of Sciences in 2017, respectively. Qiang is now affiliated to the 
+					<a href="https://sites.google.com/site/researchyilmaz/"> Dr. Emine Yilmaz</a> from 2017. Before that, he obtained his bachelor and master degree from Shandong Univeristy in 2014 and Chinese Academy of Sciences in 2017, respectively. Qiang is now affiliated to the 
 					<a href="http://www.csml.ucl.ac.uk/"> Centre for Computational Statistics and Machine Learning </a> 
 					of  
 					<a href="http://www.cs.ucl.ac.uk/home/"> Department of Computer Science</a>,
 					<a href="https://www.ucl.ac.uk/"> Univeristy College London </a>.
 				</p>
 				<p>
-					Qiang's research interest mainly lies in data science and machine learning methods. He had experience in wearable computing like physiological signals processing. Curretly he focuses on deep learning with application on natural language processing and information retrieval. Feel free to contact him by 
+					Qiang's research interest mainly lies in data science and machine learning. He had experience in wearable computing like physiological signals processing. Curretly he focuses on deep learning with application on natural language processing and information retrieval. Feel free to contact him by 
 					<a href="mailto:qiang.zhang.16@ucl.ac.uk">email</a>. 
 				</p>
 
@@ -171,15 +172,19 @@
 				<div class="card-block">
 					<h2 style="color: rgb(255,0,0);">Research Projects</h2>
 					<ul>
-						<li><a id="OptimizationofNeuralModelTrainingPosition">Optimization of Neural Model Training</a> </li>
+						<li><a id="OptimizationofNeuralModelTrainingPosition">Social Network Analysis</a> </li>
 						<li><a id="FakeNewsDetectionPosition">Fake News Detection</a></li>
-						<li><a id="WearableComputingPosition">Wearable Computing</a></li>
+						<li><a id="WearableComputingPosition">Stance Detection</a></li>
 					</ul>
 				</div>
 
 				<div class="card-block">
 					<h2 style="color: rgb(255,0,0);">Awards</h2>
 					<ul>
+						<li><a id="AwardsPosition"> 2018 NVIDIA GPU Grant </a> </li>
+
+						<li><a id="AwardsPosition"> 2017 UCL Dean Prize </a> </li>
+
 						<li><a id="AwardsPosition"> 2017 Highlight Paper: <I>Cuff-less blood pressure measurement using pulse arrival time and a Kalman filter</I> is selected as the 
 							<a href="http://iopscience.iop.org/journal/0960-1317/page/Highlights-of-2017"> JMM Highlights of 2017</a>. 
 						</a> </li>
