--- a/index.html
+++ b/index.html
@@ -151,6 +151,12 @@
 					Qiang's research interest mainly lies in data science and machine learning. He had experience in wearable computing like physiological signals processing. Curretly he focuses on deep learning with application on natural language processing and information retrieval. Feel free to contact him by 
 					<a href="mailto:qiang.zhang.16@ucl.ac.uk">email</a>. 
 				</p>
+					
+				<p>
+					News:
+					
+					Qiang was invited to attend the AI Summer School hold by the Microsoft Research Cambridge in July, 2018. 
+				</p>
 
 				</div>
 				<div class="card-block">
