--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 				<p>
 					News:
 					
-					Qiang was invited to attend the AI Summer School hold by the Microsoft Research Cambridge in July, 2018. 
+					Qiang was invited to attend the AI Summer School held by the Microsoft Research Cambridge in July, 2018. 
 				</p>
 
 				</div>
