--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
 						<a href="https://github.com/QiangAIResearcher">
 							<i class="fa fa-github fa-2x" aria-hidden="true"> </i>
 						</a>
+						<a href="https://www.researchgate.net/profile/Qiang_Zhang128">
+							<i class="fa fa-researchgate fa-2x" aria-hidden="true"> </i>
+						</a>
 					</div>
 				</div>
 				<div class="card information margin-top">
@@ -140,8 +143,8 @@
 				<div class="card-block Information">
 					<h2 style="color: rgb(255,0,0);"> <a id="HomePosition"></a> Short Bio</h2>
 				<p>
-					Mr. Qiang Zhang started his PhD research under supervision of 
-					<a href="https://sites.google.com/site/researchyilmaz/"> Dr. Emine Yilmaz</a> from 2017. Before that, he obtained his bachelor and master degree from Shandong Univeristy in 2014 and Chinese Academy of Sciences in 2017, respectively. Qiang is now affiliated to the 
+					Mr. Qiang Zhang is a PhD student under supervision of 
+					<a href="https://sites.google.com/site/researchyilmaz/"> Prof. Emine Yilmaz</a>. He obtained his bachelor and master degree from Shandong Univeristy and Chinese Academy of Sciences respectively. Qiang is now affiliated with the in the <a href="http://wi.cs.ucl.ac.uk/"> Web Intelligence Group</a>, the 
 					<a href="http://www.csml.ucl.ac.uk/"> Centre for Computational Statistics and Machine Learning </a> 
 					of  
 					<a href="http://www.cs.ucl.ac.uk/home/"> Department of Computer Science</a>,
