--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 					<h2 style="color: rgb(255,0,0);"> <a id="HomePosition"></a> Short Bio</h2>
 				<p>
 					Mr. Qiang Zhang is a PhD student under supervision of 
-					<a href="https://sites.google.com/site/researchyilmaz/"> Prof. Emine Yilmaz</a>. He obtained his bachelor and master degree from Shandong Univeristy and Chinese Academy of Sciences respectively. Qiang is now affiliated with the in the <a href="http://wi.cs.ucl.ac.uk/"> Web Intelligence Group</a>, the 
+					<a href="https://sites.google.com/site/researchyilmaz/"> Prof. Emine Yilmaz</a>. He obtained his bachelor and master degree from Shandong Univeristy and Chinese Academy of Sciences respectively. Qiang is now affiliated with the <a href="http://wi.cs.ucl.ac.uk/"> Web Intelligence Group</a>, the 
 					<a href="http://www.csml.ucl.ac.uk/"> Centre for Computational Statistics and Machine Learning </a> 
 					of  
 					<a href="http://www.cs.ucl.ac.uk/home/"> Department of Computer Science</a>,
