--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 							<i class="fa fa-github fa-2x" aria-hidden="true"> </i>
 						</a>
 						<a href="https://www.researchgate.net/profile/Qiang_Zhang128">
-							<i class="fa fa-researchgate fa-2x" aria-hidden="true"> </i>
+							<i class="fab fa-researchgate fa-2x" aria-hidden="true"> </i>
 						</a>
 					</div>
 				</div>
