--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 					<a href="https://www.ucl.ac.uk/"> Univeristy College London </a>.
 				</p>
 				<p>
-					Qiang's research interest mainly lies in data science and machine learning. He had experience in wearable computing like physiological signals processing. Curretly he focuses on deep learning with application on natural language processing and information retrieval. Feel free to contact him by 
+					Qiang's research interests lie in the areas of statistical machine learning and deep learning with applications to sequential data, such as natual lanuages, human behaviour and physiological signal. He is also also interested in multimodal data fusion and integration. Curretly he focuses on machine learning methods for automatic verification of textual facts on the web. Feel free to contact him by 
 					<a href="mailto:qiang.zhang.16@ucl.ac.uk">email</a>. 
 				</p>
 					
